--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,53 +1,52 @@
 <div class="container">
-
-  <h2>甜點分類總表</h2>
-
-  <div>
-    <%= link_to '全站使用者', admin_users_path %> |
-    <%= link_to '甜點分類表', admin_categories_path %>
-  </div>
-
-  <div class="form-inline" >
-    <%= form_for [:admin, @category] do |f| %>
-      <div class="form-group">
-        <%= f.text_field :area, placeholder: "Category Name",  class: "form-control" %>
-      </div>
-      <%= f.submit class: "btn btn-primary" %>
-      
-      <% if @category.errors.any? %>
-        <%= @category.errors.full_messages.to_sentence %>
-      <% end %>
-    <% end %>
-  </div>
-
-  <br>
-
   <div class="row">
 
-    <div class="col-md-12">
+    <div>
+      <%= link_to '全站使用者', admin_users_path %> |
+      <%= link_to '甜點分類表', admin_categories_path %>
+    </div>
 
-      <table class="table table-striped table-bordered">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>Category Name</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @categories.each do |category| %>
-          <tr>
-            <th scope="row"><%= category.id %></th>
-            <td><%= category.area %></td>
-            <td>
-              <%= link_to '編輯', admin_categories_path(id: category.id) %>&emsp;
-              <%= link_to '刪除', admin_category_path(category), method: :delete, data: { confirm: "確定要刪除嗎?"} %>
-            </td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
+    <h2>甜點分類總表</h2>
 
+    <div class="form-inline" >
+      <%= form_for [:admin, @category] do |f| %>
+        <div class="form-group">
+          <%= f.text_field :area, placeholder: "Category Name",  class: "form-control" %>
+        </div>
+        <%= f.submit class: "btn btn-primary" %>
+        
+        <% if @category.errors.any? %>
+          <%= @category.errors.full_messages.to_sentence %>
+        <% end %>
+      <% end %>
+    </div>
+
+    <br>
+
+    <div class="row">
+      <div class="col-md-12">
+        <table class="table table-striped table-bordered">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Category Name</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @categories.each do |category| %>
+            <tr>
+              <th scope="row"><%= category.id %></th>
+              <td><%= category.area %></td>
+              <td>
+                <%= link_to '編輯', admin_categories_path(id: category.id) %>&emsp;
+                <%= link_to '刪除', admin_category_path(category), method: :delete, data: { confirm: "確定要刪除嗎?"} %>
+              </td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
     </div>
 
   </div>
