--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,18 +1,24 @@
-<div>
-  <%= link_to '全站使用者', admin_users_path %> |
-  <%= link_to '甜點分類表', admin_categories_path %>
+<div class="container">
+  <div class="row">
+    
+    <div>
+      <%= link_to '全站使用者', admin_users_path %> |
+      <%= link_to '甜點分類表', admin_categories_path %>
+    </div>
+
+    <h2>全站使用者</h2>
+
+    <ul>
+      <% @users.each do |user| %>
+      <li>
+        <%= image_tag user.avatar.url(:thumb) if user.avatar? %><br>
+        暱稱: <%= user.name %><br>
+        Email: <%= user.email %><br>
+        介紹: <%= user.intro %><br>
+        權限: <%= user.role %>
+      </li>
+      <% end %>
+    </ul>
+
+  </div>
 </div>
-
-
-<h2>全站使用者</h2>
-<ul>
-  <% @users.each do |user| %>
-  <li>
-    <%= image_tag user.avatar.url(:thumb) if user.avatar? %><br>
-    暱稱: <%= user.name %><br>
-    Email: <%= user.email %><br>
-    介紹: <%= user.intro %><br>
-    權限: <%= user.role %>
-  </li>
-  <% end %>
-</ul>
