--- a/app/views/desserts/index.html.erb
+++ b/app/views/desserts/index.html.erb
@@ -1,19 +1,17 @@
-<section class = "services">     
-  <div class = "container">
-    <div class = "row">
+<div class = "container">
+  <div class = "row">
 
-      <%= link_to "全部甜點", root_path %>
+    <%= link_to "全部甜點", root_path, class: "btn btn-info" %>
 
-      <% @categories.each do |category| %>
-        <%= link_to category.area, category_path(category) %>
-      <% end %>
+    <% @categories.each do |category| %>
+      <%= link_to category.area, category_path(category), class: "btn btn-warning" %>
+    <% end %>
 
-      <hr>
+    <hr>
 
-      <%= render partial: "shared/dessert_list" %>
+    <%= render partial: "shared/dessert_list" %>
 
-    </div>
   </div>
-</section>
+</div>
 
 
