--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,9 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                     <span class="avatar w-32">
+                      <% if current_user.avatar? %>
                       <%= image_tag(current_user.avatar.url, width: 40, height: 40, class: "img-resonsive img-circle") %>
+                      <% end %>
                     </span>
                     <!-- hidden-xs hides the username on small devices so only the image appears. -->
                     <span class="hidden-xs">
