--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,19 +1,25 @@
-<h1>Order List for <%= @dessert.name %></h1>
+<div class="container">
+  <div class="row">
 
-<hr>
+    <h1>Order List for <%= @dessert.name %></h1>
 
-<% @orders.each do |order| %>
-  訂購人姓名：
-    <%= link_to user_path(order.user_id) do %>
-      <%= order.name %>
-    <% end %>  |  
-  訂購人電話：<%= order.phone %>  |  
-  訂購數量：<%= order.amount %>  |  
-  總金額：<%= order.order_price %>  |  
-  買家留言：<%= order.message %>  |  
-  訂單狀態：
-  <%= form_for [@dessert, order] do |f| %>
-    <%= f.select :shipping_status, [ '未完成', '已完成' ] %>
-    <%= f.submit %>
-  <% end %>
-<% end %>
+    <hr>
+
+    <% @orders.each do |order| %>
+      訂購人姓名：
+        <%= link_to user_path(order.user_id) do %>
+          <%= order.name %>
+        <% end %>  |  
+      訂購人電話：<%= order.phone %>  |  
+      訂購數量：<%= order.amount %>  |  
+      總金額：<%= order.order_price %>  |  
+      買家留言：<%= order.message %>  |  
+      訂單狀態：
+      <%= form_for [@dessert, order] do |f| %>
+        <%= f.select :shipping_status, [ '未完成', '已完成' ] %>
+        <%= f.submit %>
+      <% end %>
+    <% end %>
+
+  </div>
+</div>
