styled paginate and center align

--- a/app/views/shared/_dessert_list.html.erb
+++ b/app/views/shared/_dessert_list.html.erb
@@ -41,5 +41,9 @@
 
 </div>
 
-<%= paginate @desserts %>
+<div class="col-sm-12 col-md-12">
+  <div class="text-center">
+    <%= paginate @desserts %>
+  </div>
+</div>
 
