styled dessert show page

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -46,3 +46,16 @@
   opacity: 1
 }
 
+// dessert show page
+
+.dessert-all {
+  margin-bottom: 30px;
+}
+
+.dessert-content {
+  font-size: 20px;
+}
+
+.qa {
+  margin-bottom: 50px;
+}
