--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,3 +1,7 @@
+.container {
+  margin-bottom: 25px;
+}
+
 // navbar
 
 .navbar {
@@ -54,10 +58,6 @@
 
 .dessert-content {
   font-size: 20px;
-}
-
-.qa {
-  margin-bottom: 50px;
 }
 
 .dessert-edit {
