--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,77 +1,82 @@
 <div class="container">
   <div class="row">
-
-    <section class="user-profile">
+    <div class="container">
       <div class="col-md-12">
-        <% if @user.avatar? %>
-          <%= image_tag @user.avatar.url, width: 200, class: "img-responsive img-thumbnail" %>
+        <div class="col-md-12">
+          <h3><%= @user.name %></h3>
+          <p><%= @user.email %></p>
+          
+          <% if @user.avatar? %>
+            <%= image_tag @user.avatar.url, width: 200, class: "img-responsive img-thumbnail" %>
+          <% else %>
+            <!-- 替代avatar -->
+            <%= image_tag ("avatar.png"), width: '200px' %>
+          <% end %>
+
+          <% if @user == current_user %>
+            <%= link_to '編輯', edit_user_path, class: "btn btn-default" %>
+          <% end %>
+        </div>
+        
+        <div class="col-md-6">
+          <h4>關於我</h4>
+          <p><%= simple_format @user.intro %></p>
+        </div>
+
+        <div class="col-md-6">
+          <% if @user == current_user %>
+            <h4>給買家的話：(只有賣家本人及買家看得到)</h4>
+            <p><%= simple_format @user.contact_info %></p>
+          <% end %>
+        </div>
+      </div><!-- col-md-12 -->
+    </div>
+    
+    <div class="container">
+      <div class ="col-md-6">
+        <% if @user == current_user %>
+          <h3>你發起的甜點集資</h3>
         <% else %>
-          <!-- 替代avatar -->
-          <%= image_tag ("avatar.png"), width: '200px' %>
+          <h3><%= @user.name %>發起的甜點集資</h3>
         <% end %>
 
-        <% if @user == current_user %>
-          <%= link_to '編輯', edit_user_path, class: "btn btn-default" %>
-        <% end %>
+        <% @desserts.each do |dessert| %>
+          <div class="col-md-6">
+            <%= link_to dessert_path(dessert) do %>
+              <%= image_tag dessert.image_url, width: '150px' if dessert.image? %>
 
-        <h3><%= @user.name %></h3>
-        <p><%= @user.email %></p>
-        <p><%= simple_format @user.intro %></p>
-
-        <% if @user == current_user %>
-          <h5>給買家的話：</h5>
-          <p><%= simple_format @user.contact_info %></p>
-        <% end %>
-      </div>
-    </section>
-
-    <div class ="col-md-6">
-      <h3>你贊助的甜點集資</h3>
-
-      <% if @user == current_user %>
-        <% @orders.each do |order| %>
-          <div class="col-md-3">
-            <%= link_to order_path(order) do %>
-              <%= image_tag order.dessert.image.url, width: '150px' if order.dessert.image? %>
-
-              <% if !order.dessert.image? && order.dessert.ig_image_url? %>
-                <% n = order.dessert.ig_image_url.split('/')[4] %>
+              <% if !dessert.image? && dessert.ig_image_url? %>
+                <% n = dessert.ig_image_url.split('/')[4] %>
                 <%= image_tag image_url("https://instagram.com/p/#{n}/media/?size=m"), width: '150px' %>
               <% end %>
-
-              <h4><%= order.dessert.name %></h4>
+              
+              <h4><%= dessert.name %></h4>
             </div>
           <% end %>
         <% end %>
-      <% end %>
-    </div>
+      </div>
 
-    <hr>
+      <div class ="col-md-6">
+        <% if @user == current_user %>
+          <h3>你贊助的甜點集資</h3>
 
-    <div class ="col-md-6">
-      <h3>你發起的甜點集資</h3>
+          <% @orders.each do |order| %>
+            <div class="col-md-3">
+              <%= link_to order_path(order) do %>
+                <%= image_tag order.dessert.image.url, width: '150px' if order.dessert.image? %>
 
-      <% if @user == current_user %>
-        <!-- show nothing -->
-      <% else %>
-        <h3><%= @user.name %>發起的甜點集資</h3>
-      <% end %>
+                <% if !order.dessert.image? && order.dessert.ig_image_url? %>
+                  <% n = order.dessert.ig_image_url.split('/')[4] %>
+                  <%= image_tag image_url("https://instagram.com/p/#{n}/media/?size=m"), width: '150px' %>
+                <% end %>
 
-      <% @desserts.each do |dessert| %>
-        <div class="col-md-6">
-          <%= link_to dessert_path(dessert) do %>
-            <%= image_tag dessert.image_url, width: '150px' if dessert.image? %>
-
-            <% if !dessert.image? && dessert.ig_image_url? %>
-              <% n = dessert.ig_image_url.split('/')[4] %>
-              <%= image_tag image_url("https://instagram.com/p/#{n}/media/?size=m"), width: '150px' %>
+                <h4><%= order.dessert.name %></h4>
+              </div>
             <% end %>
-            
-            <h4><%= dessert.name %></h4>
-          </div>
+          <% end %>
         <% end %>
-      <% end %>
-    </div>
+      </div>
+    </div><!-- container -->
 
   </div>
 </div>
