--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,25 +1,44 @@
 <div class="container">
   <div class="row">
+    <div class="col-md-12">
 
-    <h1>Order List for <%= @dessert.name %></h1>
+      <h1><%= @dessert.name %> 訂單列表</h1>
 
-    <hr>
+      <div class="table-responsive">
+        <table class="table table-hover">
+          <tr class="info">
+            <th>訂購人姓名</th>
+            <th>訂購人電話</th>
+            <th>訂購數量</th>
+            <th>總金額</th>
+            <th>買家留言</th>
+            <th>訂單狀態</th>
+          </tr>
 
-    <% @orders.each do |order| %>
-      訂購人姓名：
-        <%= link_to user_path(order.user_id) do %>
-          <%= order.name %>
-        <% end %>  |  
-      訂購人電話：<%= order.phone %>  |  
-      訂購數量：<%= order.amount %>  |  
-      總金額：<%= order.order_price %>  |  
-      買家留言：<%= order.message %>  |  
-      訂單狀態：
-      <%= form_for [@dessert, order] do |f| %>
-        <%= f.select :shipping_status, [ '未完成', '已完成' ] %>
-        <%= f.submit %>
-      <% end %>
-    <% end %>
+          <% @orders.each do |order| %>
+            <tr class="warning">
+              <td>
+                <%= link_to user_path(order.user_id) do %>
+                  <%= order.name %>
+                <% end %>
+              </td>
 
+              <td><%= order.phone %></td>
+              <td><%= order.amount %></td>
+              <td><%= order.order_price %></td> 
+              <td><%= order.message %></td>
+              <td>
+                <%= form_for [@dessert, order] do |f| %>
+                  <%= f.select :shipping_status, [ '未完成', '已完成' ] %>
+                  <%= f.submit %>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>
+
+        </table>
+      </div>
+
+    </div>
   </div>
 </div>
