--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-md-12">
 
+      <%= link_to '回前頁', dessert_path(@dessert), class: "btn btn-primary pull-right" %>
       <h1><%= @dessert.name %> 訂單列表</h1>
 
       <div class="table-responsive">
