--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,3 +1,55 @@
+<style>
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  body {
+    font-family: $font-family;
+    font-size: $font-size;
+    background-size: 200% 100% !important;
+    animation: move 10s ease infinite;
+    transform: translate3d(0, 0, 0);
+    background: linear-gradient(45deg, #f7cae6 10%, #A2C7E5 90%);
+    height: 100vh
+  }
+  @keyframes NO {
+  from, to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+   10%, 30%, 50%, 70%, 90% {
+    -webkit-transform: translate3d(-10px, 0, 0);
+    transform: translate3d(-10px, 0, 0);
+  }
+   20%, 40%, 60%, 80% {
+    -webkit-transform: translate3d(10px, 0, 0);
+    transform: translate3d(10px, 0, 0);
+  }
+  }
+  @keyframes arrive {
+    0% {
+        opacity: 0;
+        transform: translate3d(0, 50px, 0);
+    }
+     100% {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+  }
+  @keyframes move {
+    0% {
+        background-position: 0 0
+    }
+     50% {
+        background-position: 100% 0
+    }
+     100% {
+        background-position: 0 0
+    }
+  }
+</style>
+
 <div class="container">
   <div class="row">
     <div class="col-md-12">
@@ -6,8 +58,8 @@
       <h1><%= @dessert.name %> 訂單列表</h1>
 
       <div class="table-responsive">
-        <table class="table table-hover">
-          <tr class="info">
+        <table class="table table-bordered">
+          <tr>
             <th>訂購人姓名</th>
             <th>訂購人電話</th>
             <th>訂購數量</th>
@@ -17,7 +69,7 @@
           </tr>
 
           <% @orders.each do |order| %>
-            <tr class="warning">
+            <tr>
               <td>
                 <%= link_to user_path(order.user_id) do %>
                   <%= order.name %>
@@ -31,7 +83,7 @@
               <td>
                 <%= form_for [@dessert, order] do |f| %>
                   <%= f.select :shipping_status, [ '未完成', '已完成' ] %>
-                  <%= f.submit %>
+                  <%= f.submit '更新', class: "btn btn-info" %>
                 <% end %>
               </td>
             </tr>
